# src/web/docs/swagger.yaml
@@ -315,6 +315,39 @@ paths:
       summary: Post a new Job
       tags:
       - jobs
+  /jobs/jobID:
+    get:
+      consumes:
+      - application/json
+      description: It allows to reterive a Job by ID
+      parameters:
+      - description: Job ID
+        in: path
+        name: jobID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/jobsinterface.JobResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errorinterface.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/errorinterface.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errorinterface.ErrorResponse'
+      summary: Get a  Job
+      tags:
+      - jobs
   /login:
     post:
       consumes:
